--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "romcal-api",
-  "version": "0.0.2",
-  "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal and express.",
-  "main": "index.js",
+  "version": "0.0.3",
+  "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
+  "main": "src/index.js",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/nodemon --exec babel-node src/server.js --inspect",
+    "start": "node_modules/.bin/nodemon src/server.js --inspect",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,20 +33,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "romcal": "^1.3.0-rc2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "romcal": "^1.3.0",
+    "serverless-http": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "serverless-offline": "^5.12.1"
   }
 }
