--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "romcal-api",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "engines": {
     "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/nodemon src/server.js --inspect",
+    "start": "node_modules/.bin/nodemon src/server.ts --inspect",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,13 +37,25 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "romcal": "^1.3.0",
-    "serverless-http": "^2.3.1"
+    "serverless-http": "^2.3.1",
+    "source-map-support": "^0.5.16"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.40",
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
     "nodemon": "^2.0.2",
-    "serverless-offline": "^5.12.1"
+    "serverless-offline": "^5.12.1",
+    "serverless-webpack": "^5.3.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
