--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es2017"],
+    "lib": ["es2017", "es2018"],
     "removeComments": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
