Introduce Jest and Supertest

--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,15 @@
 # Serverless directories
 .serverless
 
-# Sources
+# Sources and Config Files
 config
 src
 .idea
 .editorconfig
 .eslintcache
 .eslintrc.js
-index.ts
 tsconfig.json
 webpack.config.js
 serverless.yml
 _config.yml
+jest.config.js
