--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,15 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
-    "outDir": "lib"
+    "outDir": "lib",
+    "esModuleInterop": true
   },
   "include": ["./**/*.ts"],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
     ".webpack/**/*",
+    "dist/**/*",
     "_warmup/**/*",
     ".vscode/**/*",
     ".idea/**/*"
