Improve tooling to help to contribute on romcal-api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
   },
   "include": ["./**/*.ts"],
   "exclude": [
+    "./src/**/*.test.ts",
     "node_modules/**/*",
     ".serverless/**/*",
     ".webpack/**/*",
