--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "romcal-api",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
-  "main": "dist/service/index.js",
+  "main": "dist/src/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
@@ -10,7 +10,8 @@
     "start": "node_modules/.bin/nodemon src/server.ts --inspect",
     "build": "webpack-cli --config webpack.config.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -39,8 +40,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "romcal": "^1.3.0",
-    "serverless-http": "^2.3.1",
-    "source-map-support": "^0.5.16"
+    "serverless-http": "^2.3.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.40",
@@ -50,6 +50,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
