--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "target": "es2017",
     "outDir": "lib",
+    "resolveJsonModule": true,
     "esModuleInterop": true
   },
   "include": ["./**/*.ts"],
