--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/nodemon src/server.ts --inspect",
+    "start": "node_modules/.bin/nodemon --config nodemon.json",
     "build": "webpack-cli --config webpack.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -63,6 +63,7 @@
     "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
