--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "romcal-api",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
   "main": "dist/src/index.js",
   "engines": {
@@ -39,7 +39,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "romcal": "^1.3.0",
+    "romcal": "^1.3.1-alpha.5",
     "serverless-http": "^2.3.1"
   },
   "devDependencies": {
