--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,34 @@
-# package directories and files
-node_modules
-jspm_packages
-npm-debug.log
-dist
+# compiled output
+/dist
+/node_modules
 
-# Serverless directories
-.serverless
-dist
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Webpack directories
-.webpack
+# OS
+.DS_Store
 
-# Others
-**.DS_Store**
-.eslintcache
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
