--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "romcal-api",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
   "main": "dist/src/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
-  "scripts": {
-    "start": "node_modules/.bin/nodemon --config nodemon.json",
-    "build": "webpack-cli --config webpack.config.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "prepublishOnly": "npm test && npm run build"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/romcal/romcal-api.git"
   },
+  "author": {
+    "name": "Etienne Magnier",
+    "email": "etienne.magnier@gmail.com",
+    "url": "https://github.com/emagnier"
+  },
+  "license": "MIT",
   "keywords": [
     "api",
     "roman",
@@ -29,44 +28,67 @@
     "seasons",
     "liturgical"
   ],
-  "author": {
-    "name": "Etienne Magnier",
-    "email": "etienne.magnier@gmail.com",
-    "url": "https://github.com/emagnier"
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
+    "@nestjs/common": "^6.10.14",
+    "@nestjs/core": "^6.10.14",
+    "@nestjs/platform-express": "^6.10.14",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.0",
     "romcal": "^1.3.1-alpha.5",
-    "serverless-http": "^2.3.1"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.40",
+    "@nestjs/cli": "^6.13.2",
+    "@nestjs/schematics": "^6.8.1",
+    "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.1",
-    "@types/node": "^13.7.0",
+    "@types/jest": "25.1.2",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "serverless-offline": "^5.12.1",
-    "serverless-webpack": "^5.3.1",
+    "prettier": "^1.18.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.0",
+    "ts-jest": "25.2.0",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.6.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^3.7.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
