Integrate Serverless with Nest

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,30 @@
 service: romcal-api
 
+plugins:
+  - serverless-offline
+
+package:
+  exclude:
+    - .git/**
+    - .idea/**
+    - src/**
+    - test/**
+    - coverage/**
+    - .*
+    - nest-cli.json
+    - README.md
+    - tsconfig.*
+  include:
+    - dist/*.js
+    - dist/*.js.map
+    - dist/**/*.js
+    - dist/**/*.js.map
+
 provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
+  memory: 128
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
@@ -11,34 +32,7 @@ provider:
 
 functions:
   app:
-    handler: src/index.handler
+    handler: dist/src/lambda.handler
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
-
-  # Optional: Each function instance below will have the same code, but they'll be segmented for metrics purposes.
-  getCalendar:
-    handler: src/index.handler
-    events:
-      - http: 'GET /calendar/{proxy+}'
-  getLiturgicalCalendar:
-    handler: src/index.handler
-    events:
-      - http: 'GET /liturgical-calendar/{proxy+}'
-  getCalendars:
-    handler: src/index.handler
-    events:
-      - http: 'GET /calendars'
-  getLocales:
-    handler: src/index.handler
-    events:
-      - http: 'GET /locales'
-
-plugins:
-  - serverless-webpack
-  - serverless-offline
-
-custom:
-  webpack:
-    webpackConfig: ./webpack.config.js
-    includeModules: true
