--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "offline":  "npm run build && sls offline start",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -47,6 +48,9 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "aws-lambda": "^1.0.5",
+    "aws-serverless-express": "^3.3.6",
+    "express": "^4.16.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "reflect-metadata": "^0.1.13",
@@ -58,6 +62,8 @@
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@types/aws-lambda": "^8.10.40",
+    "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/lodash": "^4.14.149",
@@ -68,8 +74,10 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
+    "express": "^4.17.1",
     "jest": "^25.1.0",
     "prettier": "^1.18.2",
+    "serverless-offline": "^5.12.1",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.0",
     "ts-loader": "^6.2.1",
