--- a/package.json
+++ b/package.json
@@ -1,33 +1,11 @@
 {
   "name": "romcal-api",
   "version": "1.2.0",
-  "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
-  "main": "dist/src/index.js",
+  "description": "REST API to get the liturgical calendar in the Catholic Roman rite.",
+  "main": "dist/src/romcal.entry-points.js",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/romcal/romcal-api.git"
-  },
-  "author": {
-    "name": "Etienne Magnier",
-    "email": "etienne.magnier@gmail.com",
-    "url": "https://github.com/emagnier"
-  },
-  "license": "MIT",
-  "keywords": [
-    "api",
-    "roman",
-    "catholic",
-    "calendar",
-    "latin",
-    "western",
-    "church",
-    "christian",
-    "seasons",
-    "liturgical"
-  ],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -36,7 +14,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "offline":  "npm run build && sls offline start",
+    "offline": "npm run build && sls offline start",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -48,6 +26,7 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "async-middleware": "^1.2.1",
     "aws-lambda": "^1.0.5",
     "aws-serverless-express": "^3.3.6",
     "express": "^4.16.4",
@@ -98,5 +77,27 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/romcal/romcal-api.git"
+  },
+  "author": {
+    "name": "Etienne Magnier",
+    "email": "etienne.magnier@gmail.com",
+    "url": "https://github.com/emagnier"
+  },
+  "license": "MIT",
+  "keywords": [
+    "api",
+    "roman",
+    "catholic",
+    "calendar",
+    "latin",
+    "western",
+    "church",
+    "christian",
+    "seasons",
+    "liturgical"
+  ]
 }
