--- a/package.json
+++ b/package.json
@@ -1,22 +1,92 @@
 {
   "name": "romcal-api",
-  "version": "1.1.0",
-  "description": "REST API for liturgical calendars in Catholic Roman rite (Western Church). Powered by romcal.",
-  "main": "dist/src/index.js",
+  "version": "1.2.0",
+  "description": "REST API to get the liturgical calendar in the Catholic Roman rite.",
+  "main": "dist/src/main.js",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/nodemon --config nodemon.json",
+    "prebuild": "rimraf dist",
     "build": "webpack-cli --config webpack.config.js",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "node_modules/.bin/nodemon  --config nodemon.json",
+    "start:prod": "node dist/src/main",
+    "offline": "npm run build && sls offline start",
+    "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
+    "apidoc": "npx apidoc -i src/ -o docs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepublishOnly": "npm test && npm run build"
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "dependencies": {
+    "async-middleware": "^1.2.1",
+    "express": "^4.16.4",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.0",
+    "romcal": "1.3.1-alpha.5",
+    "serverless-http": "^2.3.1"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.40",
+    "@types/aws-serverless-express": "^3.3.3",
+    "@types/express": "^4.17.2",
+    "@types/jest": "25.1.2",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.6",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "apidoc": "^0.20.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
+    "express": "^4.17.1",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.18.2",
+    "serverless-offline": "^5.12.1",
+    "serverless-webpack": "^5.3.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "25.2.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/romcal/romcal-api.git"
   },
+  "author": {
+    "name": "Etienne Magnier",
+    "email": "etienne.magnier@gmail.com",
+    "url": "https://github.com/emagnier"
+  },
+  "license": "MIT",
   "keywords": [
     "api",
     "roman",
@@ -28,45 +98,5 @@
     "christian",
     "seasons",
     "liturgical"
-  ],
-  "author": {
-    "name": "Etienne Magnier",
-    "email": "etienne.magnier@gmail.com",
-    "url": "https://github.com/emagnier"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "romcal": "^1.3.1-alpha.5",
-    "serverless-http": "^2.3.1"
-  },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.40",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.1",
-    "@types/node": "^13.7.0",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "serverless-offline": "^5.12.1",
-    "serverless-webpack": "^5.3.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^25.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
-  }
+  ]
 }
